[workspace]
members = ["crates/*",]
resolver = "2"

[package]
name = "bevy_mctk"
version = "0.1.0"
authors = ["Akshay Raina <akshayr@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]
documentation = "https://docs.mecha.so"
description = "Mecha Bevy widgets toolkit"
edition = "2024"
license = "MIT"
repository = "https://github.com/mecha-org/mctk"
homepage = "https://mecha.so"

[dev-dependencies]
bevy_styled_widgets = { path = "crates/bevy_styled_widgets", version = "0.1.0", default-features = false }
bevy_additional_core_widgets = { path = "crates/bevy_additional_core_widgets", version = "0.1.0", default-features = false }
bevy = "0.16.0-dev"
bevy_core_widgets = { git = "https://github.com/viridia/bevy_core_widgets.git",  rev = "c8ef2bb82ec9706d1faea22f29f7786645a22538" }
bevy_cosmic_edit = { git = "https://github.com/swet-universe/bevy_cosmic_edit.git", branch = "bevy-compat/v0.16-update" }
accesskit = "0.18.0"
bevy_asset_loader = { version = "0.23.0-rc.3", features = ["standard_dynamic_assets"]}
tokio = { version = "1", features = ["full"] }
async-std = "1.13.1"
