[package]
name = "bevy_additional_core_widgets"
version = "0.1.0"
edition = "2024"
description = "Bevy additional core widgets, implements additional core widgets"
authors = ["Akshay Raina <akshayr@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>", "Yogita Hiray <yogitah@mechasystems.com"]
documentation = "https://docs.mecha.so"
license = "MIT"
repository = "https://github.com/mecha-org/mctk"
homepage = "https://mecha.so"

[features]
default = []

[dependencies]
bevy_core_widgets = { git = "https://github.com/viridia/bevy_core_widgets.git",  rev = "c8ef2bb82ec9706d1faea22f29f7786645a22538" }
accesskit = "0.18.0"
bevy = "0.16.0-dev"