[package]
name = "bevy_styled_widgets"
version = "0.1.0"
edition = "2024"
description = "Bevy styled widgets, implements style for core widgets"
authors = ["Akshay Raina <akshayr@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]
documentation = "https://docs.mecha.so"
license = "MIT"
repository = "https://github.com/mecha-org/mctk"
homepage = "https://mecha.so"

[features]
default = []

[dependencies]
bevy_core_widgets = { git = "https://github.com/viridia/bevy_core_widgets.git",  rev = "c8ef2bb82ec9706d1faea22f29f7786645a22538" }
bevy_additional_core_widgets = { path = "../bevy_additional_core_widgets", version = "0.1.0", default-features = false }
accesskit = "0.18.0"
bevy = "0.16.0-dev"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bevy_asset_loader = "0.23.0-rc.3"